# bot-detection

./: .gitignore  README.md  pyproject.toml
src/: clustering_exploration.ipynb  data_processing.py  detection_rules.py  main.py  parsing.py
tests/: test_detection_rules.py  test_parsing.py
